Turn server configs.

--- a/WebRTC-Coturn/turnserver.conf
+++ b/WebRTC-Coturn/turnserver.conf
@@ -124,7 +124,7 @@
 #external-ip=60.70.80.91/172.17.19.101
 #external-ip=60.70.80.92/172.17.19.102
 #external-ip=54.188.39.119/10.254.114.49
-external-ip=54.70.162.232
+external-ip=52.32.134.226/172.31.47.4
 
 # Number of relay threads to handle the established connections
 # (in addition to authentication thread and the listener thread).
@@ -146,8 +146,8 @@ relay-threads=50
 # Lower and upper bounds of the UDP relay endpoints:
 # (default values are 49152 and 65535)
 #
-min-port=50152
-max-port=65535
+#min-port=49152
+#max-port=65535
 
 # Uncomment to run TURN server in 'normal' 'moderate' verbose mode.
 # By default the verbose mode is off.
